# computer-science-999

./: .bazelrc  .gitignore  .gitlab-ci.yml  .gitmodules  Bazel.Makefile  CMakeLists.txt  Makefile  README.md  WORKSPACE  run
src/it/: BUILD  CMakeLists.txt  cucumber.yml
src/it/computer/science/: DummyTestSteps.cpp  DummyTestSteps.hpp  ItTest.cpp  ItTest.hpp
src/it/computer/science/features/: 001-Dummy.feature  005-Way.feature
src/it/computer/science/features/step_definitions/: DummyTestSteps.cpp  DummyTestSteps.hpp  ItTest.cpp  ItTest.hpp
src/it/cpp/computer/science/: DummyTestSteps.cpp  DummyTestSteps.hpp  ItTest.cpp  ItTest.hpp
src/it/features/: 000-Dummy.feature  001-Mockable.feature  002-Dummy.feature  004-MovieDataFetcher.feature
src/it/features/step_definitions/: DummyTestSteps.cpp  DummyTestSteps.hpp  ItTest.cpp  ItTest.hpp
src/main/cpp/: BUILD  CMakeLists.txt
src/main/cpp/computer/science/: B_U_I_L_D  CSList.cpp  CSList.hpp  CSQueue.cpp  CSQueue.hpp  CSVector.cpp  CSVector.hpp  Calendar.cpp  Calendar.hpp  CopyableAndMovable.cpp  CopyableAndMovable.hpp  CopyableOnly.cpp  CopyableOnly.hpp  Dummy.cpp  Dummy.hpp  IContainer.hpp  Interface.hpp  Logger.cpp  Logger.hpp  LoggingService.cpp  LoggingService.hpp  MovableOnly.cpp  MovableOnly.hpp  NonCopyableNorMovable.cpp  NonCopyableNorMovable.hpp  Singleton.cpp  Singleton.hpp  SingletonFactory.cpp  SingletonFactory.hpp  main.cpp
src/main/cpp/computer/science/ggltest/: Painter.cpp  Painter.hpp  Simple.cpp  Simple.hpp  Turtle.cpp  Turtle.hpp
src/main/cpp/computer/science/google/: Painter.cpp  Painter.hpp  Turtle.cpp  Turtle.hpp
src/main/cpp/computer/science/gotw/: Complex.cpp  Complex.hpp  Stack.cpp  Stack.hpp  StackException.cpp  StackException.hpp
src/main/cpp/computer/science/pluralsight/mocking/: APIKEy.hpp  ErrorRepository.hpp  FileErrorRepository.cpp  FileErrorRepository.hpp  InvalidInputException.hpp  JsonHelper.cpp  JsonHelper.hpp  MetaDataProcessor.cpp  MetaDataProcessor.hpp  MovieData.cpp  MovieData.hpp  MovieDataFactory.hpp  MovieMetaDataRepository.hpp  MovieNotFoundException.hpp  RestApiClient.cpp  RestApiClient.hpp  SettableMovieData.cpp  SettableMovieData.hpp  StringHtmlEncoder.cpp  StringHtmlEncoder.hpp  TheMovieDbDataFactory.cpp  TheMovieDbDataFactory.hpp  TheMovieDbRepository.cpp  TheMovieDbRepository.hpp
src/main/resources/bazel/: BUILD  configure_copts.bzl  copts.bzl
src/main/resources/configs/: AppInfo.hpp.in  BUILD  CPPLINT.cfg  GitRevision.hpp.in  Poison.hpp.in  Version.cpp.in  Version.hpp.in  code-formater.cfg  log4cxx.xml  sonar-project.properties.in
src/test/cpp/: BUILD  CMakeLists.txt
src/test/cpp/computer/science/: ContainerTest.cpp  ContainerTest.hpp  DummyTest.cpp  DummyTest.hpp  FixtureCalendarTest.cpp  FixtureCalendarTest.hpp  FixtureWithParameterizedTestCalendarTest.cpp  FixtureWithParameterizedTestCalendarTest.hpp  LineTest.cpp  MultipleParametersCalendarTest.cpp  MultipleParametersCalendarTest.hpp  ParameterizedFixtureCalendarTest.cpp  ParameterizedFixtureCalendarTest.hpp  RuleOfFivesTest.cpp  RuleOfFivesTest.hpp  SimpleCalendarTest.cpp  SingletonTest.cpp  SingletonTest.hpp  Test.cpp  Test.hpp  unitTest.cpp
src/test/cpp/computer/science/ggltest/: ExtendedTurtleTest.cpp  ExtendedTurtleTest.hpp  FakeTurtle.cpp  FakeTurtle.hpp  MockTurtle.cpp  MockTurtle.hpp  MockTurtleDelegate.cpp  MockTurtleDelegate.hpp  PainterTest.cpp  PainterTest.hpp  SimpleTest.cpp  SimpleTest.hpp  SimpleTurtleTest.cpp  SimpleTurtleTest.hpp  TurtleTest.cpp  TurtleTest.hpp
src/test/cpp/computer/science/google/: FakeTurtle.cpp  MockTurtle.cpp  MockTurtleDelegate.cpp  MockTurtleDelegate.hpp  PainterTest.cpp  PainterTest.hpp  SimpleTest.cpp  SimpleTurtleTest.cpp  SimpleTurtleTest.hpp  TurtleTest.cpp  TurtleTest.hpp
src/test/cpp/computer/science/gotw/: ComplexTest.cpp  ComplexTest.hpp  StackExceptionTest.cpp  StackExceptionTest.hpp  StackTest.cpp  StackTest.hpp
src/test/cpp/computer/science/pluralsight/mocking/: FakeMovieMetaDataRepository.hpp  FakeRestApiClient.hpp  JsonHelperTests.cpp  MetaDataProcessorTest.cpp  MetaDataProcessorTest.hpp  StringHtmlEncoderTests.cpp  TheMovieDbDataFactoryTests.cpp  TheMovieDbRepositoryTests.cpp
